--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,7 +11,7 @@
 # precedence. When someone opens a pull request that only
 # modifies JS files, only @js-owner and not the global
 # owner(s) will be requested for a review.
-*.js    @js-owner
+*.js    @js-VladimirPetranovski
 
 # You can also use email addresses if you prefer. They'll be
 # used to look up users just like we do for commit author
@@ -32,7 +32,7 @@ docs/*  vpetranovski@gmail.com
 # anywhere in your repository.
 apps/ @VladimirPetranovski
 
-# In this example, @doctocat owns any file in the `/docs`
+# In this example, @VladimirPetranovski owns any file in the `/docs`
 # directory in the root of your repository and any of its
 # subdirectories.
-/docs/ @doctocat
+/docs/ @VladimirPetranovski
