--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 	</parent>
 	<groupId>com.avp</groupId>
 	<artifactId>nutrisolbot</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>nutrisolbot</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring.cloud-version>Hoxton.SR8</spring.cloud-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -57,10 +58,10 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.7.RELEASE</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-config</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -124,12 +125,7 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
-        </dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
