--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,17 @@
 			<artifactId>spring-boot-maven-plugin</artifactId>
 			<version>2.4.3</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.vdurmont</groupId>-->
+<!--			<artifactId>emoji-java</artifactId>-->
+<!--			<version>4.0.0</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.vdurmont</groupId>
+			<artifactId>emoji-java</artifactId>
+			<version>5.1.1</version>
+		</dependency>
 
 <!--		<dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
